remove old dates from data file

--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -12,8 +12,8 @@ prerequisits:
   - DSN1677 Computer Graphics 5
   - DSN1686 Web Development 5
   - DSN1688 Motion Graphics 3
-fieldwork-start-date: March 4, 2023
-fieldwork-end-date: April 12, 2023
-grad-show-date: April 11, 2023
+fieldwork-start-date: March X, 2026
+fieldwork-end-date: April X, 2026
+grad-show-date: April XX, 2026
 work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EaCyL6atThFHtusO9HYrcvgBequ240gO4Mqp5AaE9OX8Tg?e=ZQZDYp"
 i-got-my-fieldwork-form: "https://forms.office.com/r/5kxL7S9YMt"
