more css tweaks

--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -15,5 +15,5 @@ prerequisits:
 fieldwork-start-date: March X, 2026
 fieldwork-end-date: April X, 2026
 grad-show-date: April XX, 2026
-work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EaCyL6atThFHtusO9HYrcvgBequ240gO4Mqp5AaE9OX8Tg?e=ZQZDYp"
-i-got-my-fieldwork-form: "https://forms.office.com/r/5kxL7S9YMt"
+work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EdxwHS7bjtBHkyedGvPwKMYBy4804JngFg0f9RyOz3Rm0w?e=LxHFfh"
+i-got-my-fieldwork-form: "https://forms.office.com/r/3YZE1zTAWj"
