--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 port: 4002
 description: "This is the Fieldwork & Professional Practice web site."
-url: "http://localhost:4002" # Use your production URL when deploying.
-baseurl: "" # Leave empty if your site is at the root domain.
+url: "http://localhost:4002"
+baseurl: ""
 twitter_username: alainparadis
 github_username:  alainparadis
 collections:
@@ -10,6 +10,3 @@ collections:
 exclude:
   - .sass-cache/
   - .jekyll-cache/
-  - gemfiles/
-  - Gemfile
-  - Gemfile.lock
