update urls in config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 port: 4002
 description: "This is the Fieldwork & Professional Practice web site."
-url: "http://localhost:4002"
-baseurl: ""
+# The base URL of your site when hosted
+url: "https://alainparadis.github.io/"
+# The subdirectory for your repository (leave empty for root-level sites)
+baseurl: "/WIL"
 theme: null
 exclude:
   - vendor
