add dates for fieldwork and grad show 2026

--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -12,8 +12,8 @@ prerequisits:
   - DSN1677 Computer Graphics 5
   - DSN1686 Web Development 5
   - DSN1688 Motion Graphics 3
-fieldwork-start-date: March X, 2026
-fieldwork-end-date: April X, 2026
-grad-show-date: April XX, 2026
+fieldwork-start-date: March 2, 2026
+fieldwork-end-date: April 10, 2026
+grad-show-date: April 9, 2026
 work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EdxwHS7bjtBHkyedGvPwKMYBy4804JngFg0f9RyOz3Rm0w?e=LxHFfh"
 i-got-my-fieldwork-form: "https://forms.office.com/r/3YZE1zTAWj"
