add prof short name

--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -1,5 +1,6 @@
 title: Fieldwork & Professional Practice
 professor: Alain Paradis
+prof-short-name: Alain
 email: paradia@algonquincollege.com
 phone: +1 613-727-4723,5878
 course-code: DSN1690
