add camryn's fieldwork

--- a/_data/i-got-fieldwork.yml
+++ b/_data/i-got-fieldwork.yml
@@ -1,8 +1,4 @@
-- first_name: Johnny
-  last_name: Appleseed
-  studio_name: Apple
-  studio_url: https://www.apple.ca
-- first_name: Homer
-  last_name: Simpson
-  studio_name: Sector 7G
-  studio_url: https://www.disneyplus.com/en-ca/browse/page-e68fa3ee-0f68-402d-9cb8-56883ae4c9dd
+- first_name: Camryn
+  last_name: Gagliardi
+  studio_name: Accurate Creative
+  studio_url: https://accurate.ca
