--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,10 @@ Thumbs.db
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+*.gem
+*.bundle
+*.build_complete
+*.out
+*.log
+.ruby-version
+Gemfile
