--- a/_data/i-got-fieldwork.yml
+++ b/_data/i-got-fieldwork.yml
@@ -2,3 +2,11 @@
   last_name: Gagliardi
   studio_name: Accurate Creative
   studio_url: https://accurate.ca
+- first_name: Matty
+  last_name: Bennett
+  studio_name: Banfield
+  studio_url: https://banfield.agency
+- first_name: Sai Chung (Ben)
+  last_name: Wu
+  studio_name: Ingenium
+  studio_url: https://ingenium.ca/en/
