--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -16,5 +16,5 @@ prerequisits:
 fieldwork-start-date: March 10, 2026
 fieldwork-end-date: April 17, 2026
 grad-show-date: April 16, 2026
-work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EdxwHS7bjtBHkyedGvPwKMYBy4804JngFg0f9RyOz3Rm0w?e=LxHFfh"
+work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EdxwHS7bjtBHkyedGvPwKMYBw13StRQs2bNMC8jQushC_Q?e=YoRrTj"
 i-got-my-fieldwork-form: "https://forms.office.com/r/3YZE1zTAWj"
