--- a/_data/portfolioreviews.yml
+++ b/_data/portfolioreviews.yml
@@ -1,7 +1,7 @@
 - date: "Sept. 27, 2025"
   attendees:
-    - last_name: Aires
-      first_name: Almeida
+    - last_name: Almeida
+      first_name: Aires
       studio: Operative
       url: "https://operativ.studio"
     - last_name: Guerrero
