make page urls render as directories

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url: "https://alainparadis.github.io/wil"
 baseurl: ""
 theme: null
 title: "Professional Practice"
+permalink: /:title/
 exclude:
   - vendor
   - tmp
