--- a/_data/course-info.yml
+++ b/_data/course-info.yml
@@ -16,7 +16,8 @@ prerequisits:
 fieldwork-start-date: March 10, 2026
 fieldwork-end-date: April 17, 2026
 grad-show-date: "Wednesday, April 22, 2026"
-grad-show-location: "Horticulture Building @ Lansdowne Park"
+grad-show-location: "Horticulture Building, Lansdowne Park"
+grad-show-location-address: "1525 Princess Patricia Way, Ottawa ON K1S 5J3, Canada"
 grad-show-location-map: "https://maps.apple.com/place?address=1525%20Princess%20Patricia%20Way,%20Ottawa%20ON%20K1S%205J3,%20Canada&coordinate=45.400966,-75.682529&name=Horticulture%20Building&place-id=IE5D60B5C93A484D6&map=explore"
 work-spreadsheet: "https://algonquinlivecom-my.sharepoint.com/:x:/g/personal/paradia_algonquincollege_com/EdxwHS7bjtBHkyedGvPwKMYBw13StRQs2bNMC8jQushC_Q?e=YoRrTj"
 i-got-my-fieldwork-form: "https://forms.office.com/r/3YZE1zTAWj"
